fix/ make modal more visible and adjust learn tabs on mob

--- a/client/src/templates/Challenges/components/reset-modal.css
+++ b/client/src/templates/Challenges/components/reset-modal.css
@@ -12,10 +12,6 @@
   color: var(--danger-color);
 }
 
-.reset-modal .modal-footer {
-  border-color: var(--danger-color);
-}
-
 .reset-modal-header .close {
   color: var(--danger-color);
   font-size: 28px;
